# mizani

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  live.yml
.tmp_dagster_home_81s2zl9f/history/: runs.db
.tmp_dagster_home_81s2zl9f/history/runs/: .db  index.db
.tmp_dagster_home_81s2zl9f/schedules/: schedules.db
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: sources.yml
dbt/models/marts/: dim_country.sql  dim_currency.sql  dim_date.sql  fact_exchange_rate.sql  fact_gsma_metric.sql  fact_mobile_money.sql  fact_worldbank_indicator.sql  recon_usd_rate_yearly.sql  schema.yml
dbt/models/staging/: stg_fx_rates.sql  stg_gsma_metrics.sql  stg_mobile_payments.sql  stg_worldbank.sql
dbt/seeds/: country_ref.csv  currency_ref.csv
docs/: design-decisions.md  war-stories.md
notebooks/: mobile_money_analysis.ipynb
scripts/: build_fixture_warehouse.py  build_site.py  make_notebook.py
src/mizani/: __init__.py  config.py  db.py
src/mizani/bronze/: cbk_fx.py  cbk_mobile.py  gsma.py  http.py  landing.py  run.py  worldbank.py
src/mizani/orchestration/: assets.py  definitions.py
src/mizani/silver/: cbk_fx.py  cbk_mobile.py  gsma.py  quarantine.py  run.py  worldbank.py
tests/: conftest.py  test_extractors.py  test_landing.py  test_orchestration.py  test_silver.py
tests/fixtures/: cbk_fx_sample.csv  cbk_mobile_sample.html  gsma_sample.xlsx  worldbank_fcrf_sample.json
